--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>首页</title>
-<link href="css/book_index.css" rel="stylesheet" type="text/css" />
-    <link href="css/login.css" rel="stylesheet" type="text/css" />
-    <link href="css/register.css" rel="stylesheet" type="text/css" />
-    <script type="text/javascript" src="js/jquery-1.8.3.min.js" ></script>
-    <script type="text/javascript" src="js/main/book_index.js"></script>
-    <script type="text/javascript" src="js/main/login.js"></script>
-    <script type="text/javascript" src="js/main/register.js"></script>
+<link href="https://gh-z.github.io/css/book_index.css" rel="stylesheet" type="text/css" />
+    <link href="https://gh-z.github.io/css/login.css" rel="stylesheet" type="text/css" />
+    <link href="https://gh-z.github.io/css/register.css" rel="stylesheet" type="text/css" />
+    <script type="text/javascript" src="https://gh-z.github.io/js/jquery-1.8.3.min.js" ></script>
+    <script type="text/javascript" src="https://gh-z.github.io/js/main/book_index.js"></script>
+    <script type="text/javascript" src="https://gh-z.github.io/js/main/login.js"></script>
+    <script type="text/javascript" src="https://gh-z.github.io/js/main/register.js"></script>
 </head>
 
 <body>
@@ -100,7 +100,7 @@
 
         <div class="right">
             <ul>
-                <li><input type="text"  class="text" size=50 value="请输入关键字"/><a href="bookSearch.html"><img src="image/search.png" align="center"  width="40" height="35"></a></li>
+                <li><input type="text"  class="text" size=50 value="请输入关键字"/><a href="bookSearch.html"><img src="https://gh-z.github.io/image/search.png" align="center"  width="40" height="35"></a></li>
                 <!--<input type="image"  src="image/search.png" align="center" width="40" height="35"/>-->
                 <li><a href="bookDetails.html">无上战帝</a><a href="#"> 医道官途 </a><a href="#">全职高手</a><a href="#"> 遮天</a><a href="#"> 凡人修仙传</a><a href="#"> 异世邪君</a></li>
             </ul>
